# flag_enum

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  flag_enum.cppm  vcpkg-configuration.json  vcpkg.json
.github/workflows/scripts/: CMakeUserPresets.json
test/: CMakeLists.txt  contains.cpp  format.cpp  format_nonmonotonic.cpp  operator_overloading.cpp
